# real-time-rendering

./: .gitignore  CMakeLists.txt  README.md
include/: PlaneEquation.hh  Point2.hh  camera.hh  gui.hh  image.hh  light.hh  obj-parser.hh  observer.hh  options.hh  plane.hh  point3.hh  program.hh  sdl-wrapper.hh  shader.hh  texture.hh  triangle.hh  vector3.hh
objs/: warehouse_triangle.mtl
src/: camera.cc  main.cc
src/gui/: gui.cc
src/image/: image.cc
src/parser/: obj-parser.cc  options.cc
src/program/: program.cc
src/scene/: camera.cc  light.cc  observer.cc  triangle.cc
src/shader/: shader.cc
src/shaders/: gui_vertex.shd
src/texture/: texture.cc
src/utils/: point3.cc  vector3.cc
